# AMELA

./: .gitignore  README.md  SLURM_README.md  TECHNICAL.md  environment-textless.yml  environment.yml  pyproject.toml  requirements-textless.txt  requirements.txt
metadata/: asr_test_20-10-2025.json  chunks_08-10-2025.csv
notebooks/: test.ipynb
scripts/: analyze_asr_results.py  asr.py  asr.slurm  asr_merge.py  asr_merge.slurm  asr_process.py  asr_process.slurm  asr_split.py  asr_split.slurm  asr_submit.sh  build_chunks.py  encode.py  encode.slurm  flatten_dataset.sh  generate.py  generate.slurm  grid.py  lstm.py  make_chunks.py  merge.py  merge_manifest.py  models.py  sample.slurm  speech2speech.py  speech2speech_clean.py  speech2speech_parallel.py  sts.py  sts.slurm  sts_parallel.py  synthesize.py  synthesize.slurm  train.py  train.slurm  utils.py  vad.py  vad.slurm  vad_pipeline.py  vad_pipeline.slurm
scripts/misc/: make_chunks.py
